# usb

./: .authorspellings  .travis.yml  Changelog  EventManager.hs  LICENSE  NEWS  Poll.hsc  README.markdown  Setup.hs  SystemEventManager.hs  TMVar.hs  Timeval.hs  Timeval.hsc  Utils.hs  default.nix  example.hs  index.html  params.json  shell.nix  usb.cabal  usb.nix
Data/: BCD.hs
System/: USB.hs
System/USB/: Base.hs  Descriptors.hs  DeviceHandling.hs  DeviceHandlingAndEnumeration.hs  Devices.hs  Enumeration.hs  Exceptions.hs  IO.hs  Initialization.hs  Internal.hs  Misc.hs  Safe.hs  SynchronousIO.hs  Unsafe.hs
System/USB/IO/: Asynchronous.hs  Isochronous.hs  StandardDeviceRequests.hs  Synchronous.hs  Transfers.hs
System/USB/IO/Synchronous/: Enumerator.hs
src/: Event.hs
src/System/USB/: Base.hs  Descriptors.hs  Initialization.hs  Misc.hs
src/System/USB/IO/: StandardDeviceRequests.hs  Transfers.hs
